# simple-config

./: CMakeLists.txt  README.md  simple-config.cpp  simple-config.h
